# iam-policy-least-privilege-auditor

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
docs/: demo.md  recruiter-brief.md  roadmap.md
examples/: policy.json
src/iam_policy_auditor/: __init__.py  cli.py
tests/: test_core.py
