[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-policy-auditor"
version = "0.1.0"
description = "IAM Policy Least Privilege Auditor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yusuf Kursat Tuncel"}]
keywords = ["cybersecurity", "security", "portfolio", "defensive-security"]

[project.scripts]
iam-policy-auditor = "iam_policy_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
